--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,13 @@
 *.iml
 .gradle
 /local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
+.idea/*
+!.idea/codeStyles/Project.xml
+!.idea/codeStyles/codeStyleConfig.xml
+*.ipr
+*.iws
 .DS_Store
-/build
+*/build
 /captures
 .externalNativeBuild
 .cxx
